<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="340dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:contentDescription="@string/obrazokrobocup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rbcpjnr" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/csvChooser"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:text="@string/vybra_csv_t_mov_a_discipl_n"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/jsonChooser"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/jsonChooser"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:text="@string/vybra_konfigura_n_s_bor_blokov"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/csvChooser"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="178dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/vyberte_discipl_nu"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/spinnerDiscip"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:contentDescription="@string/vyberdiscip"
                android:spinnerMode="dropdown"
                android:tooltipText="Teamy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/reloadDiscip"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <ImageButton
                android:id="@+id/reloadDiscip"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/white"
                android:contentDescription="@string/reloaddiscip"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinnerDiscip"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/re"
                tools:ignore="SpeakableTextPresentCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/vyberte_team_na_hodnotenie"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDiscip" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/reloadTeams"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/white"
                android:contentDescription="@string/reloadhodnot"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/re"
                tools:ignore="SpeakableTextPresentCheck" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:contentDescription="@string/v_ber"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:tooltipText="Teamy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/reloadTeams"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">


            <Button
                android:id="@+id/testSaveButton"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:text="@string/exportova_do_csv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/hodnotenieBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/hodnotenieBtn"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:text="@string/prida_hodnotenie"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/testSaveButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</ScrollView>